--- a/exercicio-blog-cards/exercicio-blog-cards.css
+++ b/exercicio-blog-cards/exercicio-blog-cards.css
@@ -8,3 +8,60 @@ Inspirações (não obrigatório seguir):
 Paletas: 
 https://coolors.co/
 */
+
+*{
+  background-color: rgb(181, 228, 140);
+
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+h1{
+  text-align: center;
+  font-size: 50px;
+}
+.flex-container{
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+  align-content: space-evenly;
+  flex-wrap: nowrap;
+  width: 2000px;
+  flex-basis: auto;
+}
+.container-flex1{
+  width: 450px;
+  text-align: justify;
+  background-size: cover;
+  background-color: rgb(82, 182, 154);
+  border-radius: 1cm;
+  flex-basis: auto;
+}
+.container-flex2{
+  width: 450px;
+  text-align: justify;
+  background-color: rgb(82, 182, 154);
+  background-size: cover;
+  border-radius: 1cm;
+  flex-basis: auto;
+} 
+.container-flex3{
+  width: 450px;
+  text-align: justify;
+  background-size: cover;
+  background-color: rgb(82, 182, 154);
+  border-radius: 1cm;
+  flex-basis: auto;
+}
+h3{
+  font-size: 35px;
+  text-align: center;
+}
+p{
+  font-size: 20px;
+}
+button{
+  text-align: center;
+  width: 100px;
+  font-size: 20px;
+}
+
