--- a/exercicio-blog-cards/exercicio-blog-cards.css
+++ b/exercicio-blog-cards/exercicio-blog-cards.css
@@ -9,59 +9,62 @@ Paletas:
 https://coolors.co/
 */
 
-*{
-  background-color: rgb(181, 228, 140);
+body{
+  background-color: 100vh;
+  padding: 20px;
+  margin: 50px;
+}
 
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-h1{
-  text-align: center;
-  font-size: 50px;
-}
-.flex-container{
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
+.container {
+  width: 80%;
+  height: max-content;
+  padding: 20px 15px 20px 15px;
+  margin-top: 50px;
   display: flex;
-  align-content: space-evenly;
-  flex-wrap: nowrap;
-  width: 2000px;
-  flex-basis: auto;
-}
-.container-flex1{
-  width: 450px;
-  text-align: justify;
-  background-size: cover;
-  background-color: rgb(82, 182, 154);
-  border-radius: 1cm;
-  flex-basis: auto;
-}
-.container-flex2{
-  width: 450px;
-  text-align: justify;
-  background-color: rgb(82, 182, 154);
-  background-size: cover;
-  border-radius: 1cm;
-  flex-basis: auto;
-} 
-.container-flex3{
-  width: 450px;
-  text-align: justify;
-  background-size: cover;
-  background-color: rgb(82, 182, 154);
-  border-radius: 1cm;
-  flex-basis: auto;
-}
-h3{
-  font-size: 35px;
-  text-align: center;
-}
-p{
-  font-size: 20px;
-}
-button{
-  text-align: center;
-  width: 100px;
-  font-size: 20px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+  align-content: center;
 }
 
+#card1 , #card2 , #card3 {
+  width: auto;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  text-align: justify;
+  font-size: medium;
+}
+
+#card1 :hover{
+  background-color: #99D98C;
+}
+
+#card2 :hover{
+  background-color: #99D98C;
+}
+
+#card3 :hover{
+  background-color: #99D98C;
+}
+
+.card-footer{
+  width: 100%;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  background-color: 100vh;
+  font-size: 16px;
+}
+.card-footer:hover{
+  cursor: pointer;
+}
+
+img{
+  height: 30vh;
+  width: 100vh;
+}
+
+.navbar-brand{
+  background-color: #99D98C;
+}
